--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ body {
 
   .hero-text {
     margin-top: 0;
+  } 
   }
 
 
@@ -102,7 +103,8 @@ body {
   .services {
     grid-template-columns: repeat(3, 1fr); 
     /* Geniş ekranda hizmetleri 3'lü grid yapmak için */
-  }}
+  }
+  }
   .pricing {
   display: flex;
   gap: 20px;
@@ -116,9 +118,6 @@ body {
   flex: 1; 
   text-align: center;
 }
-body {
+ {
   background-color: #f4f6f7;
-}
-.service-card {
-  background-color: white;
 }
